--- a/index.html
+++ b/index.html
@@ -1,25 +1,47 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <!-- @reload -->
-    <meta charset="utf-8">
-    <title>Title</title>
-    <!-- @include app_header -->
-    <!-- @stylesheet semantic app -->
-    <!-- @javascript jquery.min semantic -->
-</head>
+    <head>
+        <!-- @reload -->
+        <meta charset="utf-8">
+        <title>Title</title>
+        <!-- @include app_header -->
+        <!-- @stylesheet semantic app -->
+        <!-- @javascript jquery.min semantic -->
+    </head>
 
-<body>
+    <body>
+        <div class="ui inverted vertical masthead segment">
+            <div class="ui text container">
+                <h1 class="ui inverted header">
+                    Gay parties in Luxembourg
+            </h1>
+                <p>Discover the agenda of all LGBT, gay, lesbian, bears, fetish, twink, ... parties in &nbsp;<i class="lu flag"></i>Luxembourg and all the greater Region ( <i class="fr flag"></i>Lorraine, <i class="be flag"></i>Belgium and &nbsp;<i class="de flag"></i>Saarland).</p>
+                <p>You are a party organiser or you just know some parties that are not already here ? Feel free to add it in a minute. It's free and will help party organiser to make their agenda to offer a better organised nightlife in Luxembourg.</p>
+                <!-- @todo Put this somewhere more appropriate -->
+                <a class="typeform-share ui huge button primary" href="https://thibault.typeform.com/to/Jdh49S" data-mode="2" target="_blank">Submit yours</a>
+            </div>
 
-    <script type="text/javascript">
-        $(document)
-            .ready(function() {
-                // create sidebar and attach to menu open
-                var $input = $('.action.input'),
-                    toogled = false;
-            });
-    </script>
-</body>
+        </div>
+        <div class="ui container">
+            <div class="ui embed" data-url="https://calendar.google.com/calendar/embed?showTitle=0&showNav=0&showDate=0&showPrint=0&showTabs=0&showCalendars=0&showTz=0&mode=AGENDA&height=600&wkst=2&bgcolor=%23FFFFFF&src=c5hjb2jkko0ksagbip0m2sl9ho%40group.calendar.google.com&color=%23B1365F&ctz=Europe%2FLuxembourg"
+                data-placeholder="" data-icon="calendar">
+            </div>
+        </div>
+
+
+        <script type="text/javascript">
+            $(document)
+                .ready(function()
+                {
+                    // create sidebar and attach to menu open
+                    var $input = $('.action.input'),
+                        toogled = false;
+                    $('.ui.embed').embed();
+                });
+
+        </script>
+        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');}})()</script>
+    </body>
 
 </html>
