--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
 
     <body id="index">
         <div class="ui inverted vertical masthead segment">
+            <div class="video-container">
+                <div class="filter"></div>
+                <video autoplay loop class="fillWidth" poster="<!-- @path Cheer-Up.jpg -->">
+                    <source src="<!-- @path Cheer-Up.mp4 -->" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+                    <source src="<!-- @path Cheer-Up.webm -->" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+                </video>
+            </div>
             <div class="ui text container">
                 <h1 class="ui inverted header">
                     Gay parties in Luxembourg
-            </h1>
+                </h1>
                 <p>Discover the agenda of all LGBT, gay, lesbian, bears, fetish, twink, ... parties in &nbsp;<i class="lu flag"></i>Luxembourg and all the greater Region ( <i class="fr flag"></i>Lorraine, <i class="be flag"></i>Belgium and &nbsp;<i class="de flag"></i>Saarland).</p>
                 <p>You are a party organiser or you just know some parties that are not already here ? Feel free to add it in a minute. It's free and will help party organiser to make their agenda to offer a better organised nightlife in Luxembourg.</p>
                 <!-- @todo Put this somewhere more appropriate -->
@@ -29,7 +36,8 @@
                     <i class="close icon"></i>
                     <i class="sort icon"></i>Scroll for loading more content. <i class="hand pointer icon"></i>Click or tap to expand.
                 </div>
-                <div class="ui embed" data-url="https://calendar.google.com/calendar/embed?showTitle=0&showNav=0&showDate=0&showPrint=0&showTabs=0&showCalendars=0&showTz=0&mode=AGENDA&height=600&wkst=2&bgcolor=%23FFFFFF&src=c5hjb2jkko0ksagbip0m2sl9ho%40group.calendar.google.com&color=%23B1365F&ctz=Europe%2FLuxembourg" data-placeholder="" data-icon="calendar">
+                <div class="ui embed" data-url="https://calendar.google.com/calendar/embed?showTitle=0&showNav=0&showDate=0&showPrint=0&showTabs=0&showCalendars=0&showTz=0&mode=AGENDA&height=600&wkst=2&bgcolor=%23FFFFFF&src=c5hjb2jkko0ksagbip0m2sl9ho%40group.calendar.google.com&color=%23B1365F&ctz=Europe%2FLuxembourg"
+                    data-placeholder="" data-icon="calendar">
                 </div>
             </div>
         </div>
@@ -50,31 +58,7 @@
                 });
 
         </script>
-        <script>
-            (function()
-            {
-                var qs, js, q, s, d = document,
-                    gi = d.getElementById,
-                    ce = d.createElement,
-                    gt = d.getElementsByTagName,
-                    id = 'typef_orm',
-                    b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
-                if (!gi.call(d, id))
-                {
-                    js = ce.call(d, 'script');
-                    js.id = id;
-                    js.src = b + 'share.js';
-                    q = gt.call(d, 'script')[0];
-                    q.parentNode.insertBefore(js, q)
-                }
-                id = id + '_';
-                if (!gi.call(d, id))
-                {
-                    qs = ce.call(d, 'link');
-                }
-            })()
-
-        </script>
+        <!-- @javascript typeform background_video -->
     </body>
 
 </html>
